test/org/midica/testfiles/failing/instruments-in-block.midica
INCLUDE_FILE inc/instruments.midica

(

	INSTRUMENTS
		0 1 test3
	END

)